--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,5 @@ services:
     name: bun
     env: docker
     repo: https://github.com/render-examples/bun-docker
-    plan: starter
+    plan: free
     autoDeploy: false
